[package]
name = "irc-rs"
version = "0.1.0"
authors = ["Benjamin Gondange <benjamin.gondange@reseau.eseo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.7"
ansi_term = "0.12"
uuid = { version = "0.8", features = ["v4"] }